import "Monster.proto";

option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------
message HSRoleBrief
{
	required int32 roleId = 1;
	required int32 index = 2;
	required string nickname = 3;
	required int32 career = 4;
	required int32 gender = 5;
	required int32 eye = 6;
	required int32 hair = 7;
	required int32 hairColor = 8;
	required int32 level = 9;
}

message HSRoleDetail
{
	required HSRoleBrief briefData = 1;
	required int32 exp = 2;
	required int32 fatigue = 3;
	required int32 bagCapacity = 4;
	required int32 gold = 5;
	repeated HSMonster monsterList = 6;
}

